--- a/package.json
+++ b/package.json
@@ -7,9 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "array-to-tree": "^2.2.1",
+    "axios": "^0.18.0",
+    "d3": "^5.5.0",
+    "deep-rename-keys": "^0.2.1",
+    "firebase": "^5.3.1",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.4",
+    "firebaseui": "^3.3.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.22.2",
+    "paper": "^0.11.5",
+    "protobufjs": "6.8.8",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-async-computed": "^3.4.1",
+    "vue-chat-scroll": "^1.3.3",
+    "vue-masonry-css": "^1.0.2",
+    "vue-promised": "^0.2.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.12",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
