--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.22.2",
     "paper": "^0.11.5",
+    "path": "^0.12.7",
     "protobufjs": "6.8.8",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
