Use flexbox to display study groups

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "feynman-project",
-  "short_name": "feynman-project",
+  "name": "Feynman Village",
+  "short_name": "Feynman",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
