--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,9 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.13.0",
-    "firebase-functions": "^2.0.0"
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.5",
+    "web-push": "^3.3.2"
   },
   "private": true
 }
