--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.5.17",
     "vue-async-computed": "^3.4.1",
     "vue-chat-scroll": "^1.3.3",
+    "vue-cli": "^2.9.6",
     "vue-masonry-css": "^1.0.2",
     "vue-promised": "^0.2.2",
     "vue-resource": "^1.5.1",
