--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "array-to-tree": "^2.2.1",
     "axios": "^0.18.0",
     "d3": "^5.5.0",
