--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^5.3.1",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.4",
+    "lodash": "^4.17.11",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.22.2",
     "paper": "^0.11.5",
